# ciratefi

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: debug_trap.h
include/filters/: circ_sample_filter.h  radi_filter.h  radi_sample_filter.h  tmpl_filter.h
include/utils/: image_ops.h
src/: main.cpp
src/filters/: circ_filter.cpp  circ_sample_filter.cpp  radi_filter.cpp  radi_sample_filter.cpp  tmpl_filter.cpp
